Fix z-index error.

--- a/src/assets/scss/_sidebar.scss
+++ b/src/assets/scss/_sidebar.scss
@@ -3,6 +3,7 @@
   width: 10rem;
   position: fixed;
   color: $black;
+  z-index: 10000;
   ul {
     padding: 2rem 1rem;
     display: flex;
